* Fixed fatal crash related to MARS_DEBRIS terrain tiles; reported by BiggusDickus, TheCatProgram & jamesbrand97 by Lowtek
* Fixed several wrongly defined tiles on several Mars terrains, by wethan2
* Reduced executionOdds of Insurgent Offensive and moved the missions to month 8, 10 and 12 only, feedback by Brother^2
* Act 2 begins two months earlier
* Fixed issue with broken Vastitas Borealis region crashing after alien base was established, by efrenespartano

9-July-2023: v0.1 Martian Greeting
* Added BFM original globe data, made by liberation
* Added new Mars textures, drawn by Hans Woofington
* Custom string in main Mars landscapes
* Brand new synthwave OST: 14 tracks composed by Ikhanad, 2 tracks composed by Southoftheline
* Lots of new lore entries, written by Fegelein, Kael Schwabauer, efrenespartano, Filip-H
* 49 Geoscape events, written by efrenespartano, Fegelein & Rclipse
* Five mission types:
    - Counter-Insurgency Operation
    - Search and Destroy Operation
    - Supply Recovery Operation
    - Major Engagement
    - Operation Swordbreaker
* Added UNEXCOM space planes
	- USA: Boeing SF-22 Dyna-MOWS, SAV-8M Harrier
	- NATO: Eurofighter HERMES ECSF-3
	- USSR: MiG-135 Super Fiery, Yak-38M 'Forger'
	- UN: SDS-80 Intruder Shuttle, Sabre
* Added UN Alloy Weapons, by wolverin
* Added Faction Specific Lasers, by Fegelein & efrenespartano
* Added Space-Capable Weapons, by Hans Woofington
* Added Futuristic Ballistic Weapons, by efrenespartano
* Added Mars terrains, by efrenespartano
    - Southern Rocky Highlands
    - Alien Military Base
    - Human R&D Station 
    - Former Warzone
    - Dry Seabed
* Added Mars terrains made by cevaralien
    - Southern Highlands
    - Alien Civilian Complex
    - Nothern Lowlands
    - Southern Plains 
* Added Mars terrains made by liberation
    - Northern Volcanic Plains 
    - Southern Plains 
    - Polar Ice Caps 
    - Volcanic Highlands
* All aliens now have spacesuits