@@ -103,8 +103,10 @@ en-US:
       STR_POWER_DESTROYED: "POWER SOURCES DESTROYED"
       STR_OVERSEER_BRIEFING: "CODENAME: Operation False Flag - Using a captured Hyper Wave Encoder we were able to get the Overseer UFO to land, faking a base location. Our mission: we have to either kill all aliens or destroy the power source and evacuate before the time runs out and the aliens realize what is happening and lift off. They'll never know - we give no warning. We set a trap, they took the bait."
 
-      STR_COUNTRY_HAS_SIGNED_A_SECRET_PACT: "{0} has been overrun by alien insurgents and we have lost contact with the UN forces in the area. There are reports of a new alien base in the area."
-      STR_COUNTRIES_HAVE_SIGNED_A_SECRET_PACT: "{0} have been overrun by alien insurgents and we have lost contact with the UN forces in the area. There are reports of new alien bases in the area."
+      STR_COUNTRY_HAS_SIGNED_A_SECRET_PACT: "{0} has been overrun by alien insurgents and we have lost contact with the UN forces in the area. There are reports of a new alien structure in the area."
+      STR_COUNTRIES_HAVE_SIGNED_A_SECRET_PACT: "{0} have been overrun by alien insurgents and we have lost contact with the UN forces in the area. There are reports of new alien structures in the area."
+      STR_COUNTRY_HAS_CANCELLED_A_SECRET_PACT: "The alien structure controlling {0} was destroyed and we have regained control. The local UN forces have returned to the area."
+      STR_COUNTRIES_HAVE_CANCELLED_A_SECRET_PACT: "The alien structures controlling {0} were destroyed and we have regained control. The local UN forces have returned to the area."
 
 ####################################################
 
@@ -813,8 +815,11 @@ en-US:
       STR_COUNTER_INSURGENCY_OPERATION_DESCRIPTION: "Allied forces operating in the area have reported Insurgent activity, most likely aimed to compromise their safety. We have been tasked to engage the alien guerrilla before they manage to damage our assets and retreat. "
       STR_COUNTER_INSURGENCY_OPERATION_MARKER_NAME: "Counter-Insurgency Operation Requested"
       STR_COUNTER_INSURGENCY_OPERATION_ALERT: "Counter-Insurgency"
-      STR_COUNTER_INSURGENCY_OPERATION_COMPLETE: "The alien guerrillas were suppressed and no longer pose a threat for our personnel. Orbital recon reports the surviving Insurgents try to flee away from the combat zone, gunships are directed to intercept them."
-      STR_COUNTER_INSURGENCY_OPERATION_FAILURE: "The enemy managed to flee the warzone, they'll most likely continue they terror campaign on our civilian and military outposts. We cannot allow it to happen again. "
+      STR_COUNTER_INSURGENCY_OPERATION_COMPLETE: "The alien guerrillas were neutralized!"
+      STR_COUNTER_INSURGENCY_OPERATION_FAILURE: "The enemy managed to flee the warzone."
+      #STR_COUNTER_INSURGENCY_OPERATION_COMPLETE: "The alien guerrillas were suppressed and no longer pose a threat for our personnel. Orbital recon reports the surviving Insurgents try to flee away from the combat zone, gunships are directed to intercept them."
+      #STR_COUNTER_INSURGENCY_OPERATION_FAILURE: "The enemy managed to flee the warzone, they'll most likely continue they terror campaign on our civilian and military outposts. We cannot allow it to happen again. "
+
       STR_DELETE_COUNTER_INSURGENCY_OPERATIONS: "End Counter-Insurgency Operations"
 
       STR_SEARCH_AND_DESTROY_OPERATION_MISSION: "Search and Destroy Operation"
@@ -822,8 +827,10 @@ en-US:
       STR_SEARCH_AND_DESTROY_OPERATION_DESCRIPTION: "We were deployed to what appears to be an Insurgent facility, recently detected by allied recon units. The mission consists in approach the enemy settlement, detect any armed hostile and engage them, then quickly return before the enemy manages to prepare a counterstrike. Be careful, this is urban combat. There may be Insurgents in every house. Evacuate before 10 turns, otherwise the LZ will be compromised and your forces overrun."
       STR_SEARCH_AND_DESTROY_OPERATION_MARKER_NAME: "Search and Destroy Operation requested"
       STR_SEARCH_AND_DESTROY_OPERATION_ALERT: "Search and Destroy"
-      STR_SEARCH_AND_DESTROY_OPERATION_COMPLETE: "We managed to locate and eliminate all the insurgents in the alien settlement. This has substantially reduced the support they get from the local dwellers, while improving our presence around the area."
-      STR_SEARCH_AND_DESTROY_OPERATION_FAILURE: "We failed to accomplish the mission. The guerrillas overran the landing zone and we lost contact with our forces. The enemy has secured yet another alien settlement, increasing their resources and manpower. We must avoid any further insurgent expanse."
+      STR_SEARCH_AND_DESTROY_OPERATION_COMPLETE: "All the insurgents were destroyed."
+      STR_SEARCH_AND_DESTROY_OPERATION_FAILURE: "The guerrillas overran the landing zone."
+      #STR_SEARCH_AND_DESTROY_OPERATION_COMPLETE: "We managed to locate and eliminate all the insurgents in the alien settlement. This has substantially reduced the support they get from the local dwellers, while improving our presence around the area."
+      #STR_SEARCH_AND_DESTROY_OPERATION_FAILURE: "We failed to accomplish the mission. The guerrillas overran the landing zone and we lost contact with our forces. The enemy has secured yet another alien settlement, increasing their resources and manpower. We must avoid any further insurgent expanse."
       STR_DELETE_SEARCH_AND_DESTROY_OPERATIONS: "End Search and Destroy Operations"
 
       STR_SUPPLY_RECOVERY_OPERATION_MISSION: "Supply Recovery Operation"
@@ -831,8 +838,10 @@ en-US:
       STR_SUPPLY_RECOVERY_OPERATION_DESCRIPTION: "Local recon has identified supplies left behind in a small outpost left untouched after the enemy offensive. Our task is approach the site and retrieve any useful supply or equipment. Be careful, the enemy attackers may be near the area, they will intercept our team if we take too long. Evacuate before 10 turns."
       STR_SUPPLY_RECOVERY_OPERATION_MARKER_NAME: "Supply Recovery Operation planned"
       STR_SUPPLY_RECOVERY_OPERATION_ALERT: "Supply Recovery"
-      STR_SUPPLY_RECOVERY_OPERATION_COMPLETE: "Our supply run was successful and we managed to adquire valuable assets from the warzone, needed to keep our operations ongoing. Any bullet or battery we got keep us on the fight another day."
-      STR_SUPPLY_RECOVERY_OPERATION_FAILURE: "Our scavenger team was overwhelmed and destroyed. Local recon informs the aliens completely burnt the site to the ground, negating us of another possible supply point. We will lose this war if we don't have bullets or batteries to fight it."
+      STR_SUPPLY_RECOVERY_OPERATION_COMPLETE: "Our supply run was successful."
+      STR_SUPPLY_RECOVERY_OPERATION_FAILURE: "Our scavenger team was overwhelmed and destroyed."
+      #STR_SUPPLY_RECOVERY_OPERATION_COMPLETE: "Our supply run was successful and we managed to adquire valuable assets from the warzone, needed to keep our operations ongoing. Any bullet or battery we got keep us on the fight another day."
+      #STR_SUPPLY_RECOVERY_OPERATION_FAILURE: "Our scavenger team was overwhelmed and destroyed. Local recon informs the aliens completely burnt the site to the ground, negating us of another possible supply point. We will lose this war if we don't have bullets or batteries to fight it."
       STR_DELETE_SUPPLY_RECOVERY_OPERATIONS: "End Supply Recovery Operations"
 
       STR_MAJOR_ENGAGEMENT_MISSION: "Major Engagement"
@@ -840,8 +849,10 @@ en-US:
       STR_MAJOR_ENGAGEMENT_DESCRIPTION: "UN forces have intercepted a large group of Insurgents and a fierce battle has begun. While the allied forces could win the combat on their own, the UNSC has tasked us to turn the tide. Land and support the friendly units before the enemy manages to flee."
       STR_MAJOR_ENGAGEMENT_MARKER_NAME: "Major Engagement ongoing"
       STR_MAJOR_ENGAGEMENT_ALERT: "Major Engagement"
-      STR_MAJOR_ENGAGEMENT_COMPLETE: "The victory is ours. The Insurgent forces were completely annihilated, this is a severe blow to their war efforts."
-      STR_MAJOR_ENGAGEMENT_FAILURE: "Although we tried our best, the enemy managed to hold their ground. Don't let this stop our advance, keep pushing forward."
+      STR_MAJOR_ENGAGEMENT_COMPLETE: "The Insurgent forces were completely annihilated."
+      STR_MAJOR_ENGAGEMENT_FAILURE: "The enemy managed to hold their ground."
+      #STR_MAJOR_ENGAGEMENT_COMPLETE: "The victory is ours. The Insurgent forces were completely annihilated, this is a severe blow to their war efforts."
+      #STR_MAJOR_ENGAGEMENT_FAILURE: "Although we tried our best, the enemy managed to hold their ground. Don't let this stop our advance, keep pushing forward."
 
       STR_OPERATION_SWORDBREAKER_MISSION: "Operation Swordbreaker"
       STR_OPERATION_SWORDBREAKER_DEPLOYMENT: "OPERATION SWORDBREAKER - LANDING"
