@@ -753,7 +753,7 @@ events:
     timerRandom: 4350
 
   - name: STR_STAR_WARS_MOVIE_RELEASED_EVENT
-    description: STR_STAR_WARS_MOVIE_RELEASED_EVENT_DESCRIPTION
+    description: STR_STAR_WARS_MOVIE_RELEASED_EVENT_DRSCRIPTION
     background: STAR_WARS_MOVIE_RELEASED_EVENT_BACKGROUND
     #regionList: [STR_SOUTH_EAST_ASIA]
     points: 30
